# asset_scanner

./: .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt
scan_results/: scan_report.json  scan_report.txt
scripts/: scan_assets.py
scripts/modules/: report.py
src/asset_scanner/: __init__.py  api.py  asset_models.py  asset_scanner.py  cache.py  class_models.py  class_parser.py  class_scanner.py  config.py  models.py  pbo_extractor.py  py.typed  scanner.py  scanner_base.py  scanner_engine.py  scanner_parallel.py  scanner_tasks.py
src/asset_scanner/class_parser/: __init__.py  class_parser.py  errors.py
src/asset_scanner/class_parser/core/: __init__.py  config_class.py  config_groups.py  config_value.py
src/asset_scanner/class_parser/hierarchy/: __init__.py  class_registry.py  hierarchy_builder.py
src/asset_scanner/class_parser/parsing/: __init__.py  block_scanner.py  patterns.py  property_parser.py  raw_class.py  scanner.py  text_preprocessor.py  (+1 more)
src/asset_scanner/types/: progress_callback.py
tests/: conftest.py  test_accumulation.py  test_api.py  test_asset_data.py  test_basic.py  test_caching.py  test_class_config_enhanced_movement.py  test_class_config_mirrorform.py  test_class_config_rhs_headband.py  test_classes.py  test_data.py  test_edge_cases.py  test_error_handling.py  test_normalization.py  test_parallel_scanner.py  test_pbo_dump.py  test_pbo_scanning.py  test_performance.py  test_real_data.py  test_search.py  test_verification.py
tests/class_parser/: test_class_parser.py
tools/: scan_assets.py
tools/modules/: report.py
