[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asset_scanner"
version = "0.1.0"
description = "Asset scanner for game mods"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pytest==8.3.4"]
dynamic = []

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["asset_scanner"]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
testpaths = ["tests"]